<resources>
    <string name="app_name">Mapstrack</string>
    <string name="hello_blank_fragment">Hello MapsTrack</string>
    <string name="search_hint">Search</string>
    <string name="fragment_profile_button1">Logout</string>
    <string name="fragment_profile_button2">Edit Profile</string>
    <string name="fragment_profile_textview1">Sharman Joshi</string>
    <string name="fragment_profile_textview2">sharmanjoshi@gmail.com</string>
    <string name="fragment_profile_textview3">9873046993</string>
    <string name="fragment_setting_textview1">Settings</string>
    <string name="fragment_setting_button1">About us</string>
    <string name="fragment_setting_button2">FAQs</string>
    <string name="fragment_setting_button3">Share</string>
    <string name="fragment_setting_button4">Rate</string>
    <string name="fragment_setting_button5">Contact</string>
    <string name="fragment_setting_button6">Terms and Conditions</string>
    <string name="fragment_about_us_textview0">About us</string>
    <string name="fragment_faq_textview0">FAQs</string>
    <string name="fragment_contact_textview0">Contact us</string>
    <string name="fragment_terms_textview0">Terms &amp; Conditions</string>
    <string name="fragment_home_textview1">Events</string>
    <string name="fragment_home_textview2">Locations</string>
    <string name="layout_home_event_textview1">Ravi123</string>
    <string name="layout_home_event_textview2">DLF Phase 3, Gurgaon</string>
    <string name="layout_fragment_share_item_textview1">Ravi Gupta</string>
    <string name="fragment_share_header_name">Location shared by you</string>
    <string name="fragment_create_event_edittext1">Event Name</string>
    <string name="fragment_create_event_edittext2">Location</string>
    <string name="fragment_create_event_edittext3">Event Date</string>
    <string name="fragment_create_event_edittext4">Event Description</string>
    <string name="fragment_create_event_edittext5">Add Contact</string>
    <string name="fragment_create_event_button1">Edit Image</string>
    <string name="fragment_create_event_button3">Show Added Friends</string>
    <string name="fragment_create_event_button4">Invite Friends</string>
    <string name="fragment_create_event_button2">Publish Your Event</string>
    <string name="fragment_create_event_radio_button1">Public</string>
    <string name="fragment_create_event_radio_button2">Private</string>
    <string name="layout_display_contact_textview1">Ravi Gupta</string>
    <string name="fragment_create_event_textview0">Create Event</string>
    <string name="fragment_create_event_hint">event type</string>
    <string name="fragment_create_event_placeHolder">Event Type</string>
    <string name="fragment_create_location_edittext1">Enter Location Name</string>
    <string name="fragment_create_location_edittext2">Enter Location Id</string>
    <string name="fragment_create_location_edittext3">Enter Location</string>
    <string name="fragment_create_location_button1">Select Friends</string>
    <string name="fragment_create_location_button2">Publish Location</string>
    <string name="fragment_create_location_textview0">Create Location</string>
    <string name="service_not_available">Service Not Available</string>
    <string name="invalid_lat_long_used">Invalid Latitude and Longitude</string>
    <string name="no_address_found">No Address Found</string>
    <string name="address_found">Address Found</string>
    <string name="fragment_show_contact_textview0">Select Friends</string>
    <string name="layout_select_contact">919873046993</string>
    <string name="layout_home_menu_options_textview1">Ravi123</string>
    <string name="layout_home_menu_options_textview2">DLF Phase 3</string>
    <string name="layout_home_menu_options_textview3">Ravi123 is a event in which everybody get togeather</string>
    <string name="layout_home_menu_options_textview4">Birthday</string>
    <string name="layout_home_menu_options_textview5">26 June 2016</string>
    <string name="layout_location_home_menu_options_textview1">Meeting with G Vamshi</string>
    <string name="layout_location_home_menu_options_textview2">Ravi123</string>
    <string name="layout_location_home_menu_options_textview3">V 20/9, DLF Phase 2, Sector 24,Gurgaon</string>
    <string name="fragment_map_textview0">Maps Track</string>
    <string name="fragment_map_textview1">52km</string>
    <string name="fragment_map_textview2">25mins</string>
    <string name="fragment_login_textview0">Maps</string>
    <string name="fragment_login_textview1">Track</string>
    <string name="fragment_login_textview2">log in with</string>
    <string name="fragment_login_button1">Google +</string>
    <string name="fragment_event_info_textview0">Party House</string>
    <string name="fragment_event_info_textview1">Party House</string>
    <string name="fragment_event_info_textview2">Party</string>
    <string name="fragment_event_info_textview3">26 June 2016</string>
    <string name="fragment_event_info_textview4">V 21/6, DLF Phase 3, Gurgaon</string>
    <string name="fragment_event_info_textview5">Debra Granik 85 will screen and discuss her best-known work to date the
                Oscar nominated film Winters Bone</string>
    <string name="fragment_event_info_textview6">20 Friends</string>
    <string name="layout_event_info_button1">Edit Event</string>
    <string name="layout_event_info_button2">Delete Event</string>
    <string name="layout_event_info_button3">Open Map</string>
    <string name="layout_location_info_button1">Edit Location</string>
    <string name="layout_location_info_button2">Open Map</string>
    <string name="layout_location_info_button3">Delete Location</string>
    <string name="layout_location_info_button4">Create event using this location</string>
    <string name="fragment_event_list_button1">My Events</string>
    <string name="fragment_event_list_button2">Shared</string>
    <string name="fragment_event_list_button3">Nearby</string>
    <string name="fragment_location_list_button1">My Location</string>
    <string name="fragment_location_list_button2">Shared</string>
    <string name="fragment_location_list_button3">Nearby</string>
    <string-array name="CountryCodes" >
        <item>93,AF</item>
        <item>355,AL</item>
        <item>213,DZ</item>
        <item>376,AD</item>
        <item>244,AO</item>
        <item>672,AQ</item>
        <item>54,AR</item>
        <item>374,AM</item>
        <item>297,AW</item>
        <item>61,AU</item>
        <item>43,AT</item>
        <item>994,AZ</item>
        <item>973,BH</item>
        <item>880,BD</item>
        <item>375,BY</item>
        <item>32,BE</item>
        <item>501,BZ</item>
        <item>229,BJ</item>
        <item>975,BT</item>
        <item>591,BO</item>
        <item>387,BA</item>
        <item>267,BW</item>
        <item>55,BR</item>
        <item>673,BN</item>
        <item>359,BG</item>
        <item>226,BF</item>
        <item>95,MM</item>
        <item>257,BI</item>
        <item>855,KH</item>
        <item>237,CM</item>
        <item>1,CA</item>
        <item>238,CV</item>
        <item>236,CF</item>
        <item>235,TD</item>
        <item>56,CL</item>
        <item>86,CN</item>
        <item>61,CX</item>
        <item>61,CC</item>
        <item>57,CO</item>
        <item>269,KM</item>
        <item>242,CG</item>
        <item>243,CD</item>
        <item>682,CK</item>
        <item>506,CR</item>
        <item>385,HR</item>
        <item>53,CU</item>
        <item>357,CY</item>
        <item>420,CZ</item>
        <item>45,DK</item>
        <item>253,DJ</item>
        <item>670,TL</item>
        <item>593,EC</item>
        <item>20,EG</item>
        <item>503,SV</item>
        <item>240,GQ</item>
        <item>291,ER</item>
        <item>372,EE</item>
        <item>251,ET</item>
        <item>500,FK</item>
        <item>298,FO</item>
        <item>679,FJ</item>
        <item>358,FI</item>
        <item>33,FR</item>
        <item>689,PF</item>
        <item>241,GA</item>
        <item>220,GM</item>
        <item>995,GE</item>
        <item>49,DE</item>
        <item>233,GH</item>
        <item>350,GI</item>
        <item>30,GR</item>
        <item>299,GL</item>
        <item>502,GT</item>
        <item>224,GN</item>
        <item>245,GW</item>
        <item>592,GY</item>
        <item>509,HT</item>
        <item>504,HN</item>
        <item>852,HK</item>
        <item>36,HU</item>
        <item>91,IN</item>
        <item>62,ID</item>
        <item>98,IR</item>
        <item>964,IQ</item>
        <item>353,IE</item>
        <item>44,IM</item>
        <item>972,IL</item>
        <item>39,IT</item>
        <item>225,CI</item>
        <item>81,JP</item>
        <item>962,JO</item>
        <item>7,KZ</item>
        <item>254,KE</item>
        <item>686,KI</item>
        <item>965,KW</item>
        <item>996,KG</item>
        <item>856,LA</item>
        <item>371,LV</item>
        <item>961,LB</item>
        <item>266,LS</item>
        <item>231,LR</item>
        <item>218,LY</item>
        <item>423,LI</item>
        <item>370,LT</item>
        <item>352,LU</item>
        <item>853,MO</item>
        <item>389,MK</item>
        <item>261,MG</item>
        <item>265,MW</item>
        <item>60,MY</item>
        <item>960,MV</item>
        <item>223,ML</item>
        <item>356,MT</item>
        <item>692,MH</item>
        <item>222,MR</item>
        <item>230,MU</item>
        <item>262,YT</item>
        <item>52,MX</item>
        <item>691,FM</item>
        <item>373,MD</item>
        <item>377,MC</item>
        <item>976,MN</item>
        <item>382,ME</item>
        <item>212,MA</item>
        <item>258,MZ</item>
        <item>264,NA</item>
        <item>674,NR</item>
        <item>977,NP</item>
        <item>31,NL</item>
        <item>599,AN</item>
        <item>687,NC</item>
        <item>64,NZ</item>
        <item>505,NI</item>
        <item>227,NE</item>
        <item>234,NG</item>
        <item>683,NU</item>
        <item>850,KP</item>
        <item>47,NO</item>
        <item>968,OM</item>
        <item>92,PK</item>
        <item>680,PW</item>
        <item>507,PA</item>
        <item>675,PG</item>
        <item>595,PY</item>
        <item>51,PE</item>
        <item>63,PH</item>
        <item>870,PN</item>
        <item>48,PL</item>
        <item>351,PT</item>
        <item>1,PR</item>
        <item>974,QA</item>
        <item>40,RO</item>
        <item>7,RU</item>
        <item>250,RW</item>
        <item>590,BL</item>
        <item>685,WS</item>
        <item>378,SM</item>
        <item>239,ST</item>
        <item>966,SA</item>
        <item>221,SN</item>
        <item>381,RS</item>
        <item>248,SC</item>
        <item>232,SL</item>
        <item>65,SG</item>
        <item>421,SK</item>
        <item>386,SI</item>
        <item>677,SB</item>
        <item>252,SO</item>
        <item>27,ZA</item>
        <item>82,KR</item>
        <item>34,ES</item>
        <item>94,LK</item>
        <item>290,SH</item>
        <item>508,PM</item>
        <item>249,SD</item>
        <item>597,SR</item>
        <item>268,SZ</item>
        <item>46,SE</item>
        <item>41,CH</item>
        <item>963,SY</item>
        <item>886,TW</item>
        <item>992,TJ</item>
        <item>255,TZ</item>
        <item>66,TH</item>
        <item>228,TG</item>
        <item>690,TK</item>
        <item>676,TO</item>
        <item>216,TN</item>
        <item>90,TR</item>
        <item>993,TM</item>
        <item>688,TV</item>
        <item>971,AE</item>
        <item>256,UG</item>
        <item>44,GB</item>
        <item>380,UA</item>
        <item>598,UY</item>
        <item>1,US</item>
        <item>998,UZ</item>
        <item>678,VU</item>
        <item>39,VA</item>
        <item>58,VE</item>
        <item>84,VN</item>
        <item>681,WF</item>
        <item>967,YE</item>
        <item>260,ZM</item>
        <item>263,ZW</item>
    </string-array>
</resources>