<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.snaphy.mapstrack.Fragment.ProfileFragment"
    android:clickable="true"
    android:background="@color/background">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/fragment_profile_picture"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:src="@drawable/profile"
        app:civ_border_width="0dp"
        app:civ_border_color="#FF000000"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp" />

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:background="@drawable/profile_border"
        android:layout_marginTop="47.5dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_profile_textview1"
        android:layout_below="@+id/fragment_profile_picture"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textSize="19sp"
        android:id="@+id/fragment_profile_textview1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_profile_textview2"
        android:layout_below="@+id/fragment_profile_textview1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        android:textSize="15sp"
        android:id="@+id/fragment_profile_textview2"
        android:textColor="@color/lightTextColor"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_profile_textview3"
        android:layout_below="@+id/fragment_profile_textview2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        android:textSize="15sp"
        android:id="@+id/fragment_profile_textview3"
        android:textColor="@color/lightTextColor"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@mipmap/logout"
        android:text="@string/fragment_profile_button1"
        android:textAllCaps="false"
        android:background="@drawable/button_style_white"
        android:layout_below="@+id/fragment_profile_textview2"
        android:id="@+id/fragment_profile_button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textColor="@color/googleRed"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

    <Button
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:layout_marginRight="0.5dp"
        android:background="@color/googleRed"
        android:text="@string/fragment_profile_button2"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:id="@+id/fragment_chef_button3"/>

    </LinearLayout>

</RelativeLayout>
