<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.snaphy.mapstrack.Fragment.LoginFragment"
    android:background="@drawable/login_page2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_login_textview0"
        android:id="@+id/fragment_login_textview0"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_login_textview1"
        android:id="@+id/fragment_login_textview1"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/fragment_login_textview0"
        android:paddingLeft="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_login_textview2"
        android:id="@+id/fragment_login_textview2"
        android:textColor="@color/white"
        android:layout_above="@+id/fragment_login_button1"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"/>

    <com.google.android.gms.common.SignInButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_login_button1"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
