<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.snaphy.mapstrack.Fragment.EventListFragment"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_event_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:layout_marginBottom="50dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/black"
        android:id="@+id/view"
        android:layout_alignTop="@+id/layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:id="@+id/layout">

        <Button
            android:id="@+id/fragment_event_list_button1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:text="@string/fragment_event_list_button1"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <Button
            android:id="@+id/fragment_event_list_button2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:text="@string/fragment_event_list_button2"
            android:textColor="@color/darkGrey"/>


        <Button
            android:id="@+id/fragment_event_list_button3"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:text="@string/fragment_event_list_button3"
            android:textColor="@color/darkGrey"/>


    </LinearLayout>

</RelativeLayout>
